--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "laravelcollective/html": "^6.2",
-        "masterro/laravel-xss-filter": "^1.3"
+        "masterro/laravel-xss-filter": "^1.3",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "srmklive/paypal": "~1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
